# sdkscan

./: README.md  pyproject.toml
src/sdkscan/: __init__.py  cli.py  core.py
